--- a/2.4.html
+++ b/2.4.html
@@ -61,7 +61,7 @@
 					<br>
 					<div>
 						<label>Promoción</label><br>
-							<input type="radio" name="promo">
+							<input type="radio" checked name="promo">
 							<label>Ninguno</label><br>
 							<input type="radio" name="promo">
 							<label>Transporte gratuito</label><br>
